--- a/layout/layout.css
+++ b/layout/layout.css
@@ -36,3 +36,7 @@ line-height: 46px;
 p{
     font-family: 'Roboto', sans-serif;
 }
+h3{
+    font-family: 'Roboto', sans-serif;
+    font-size: 26px;
+}
