--- a/pages/page01/page01.css
+++ b/pages/page01/page01.css
@@ -1,22 +1,24 @@
-
-.article-h{
+.article-h {
     display: flex;
     flex-direction: column;
     margin: 0%;
     justify-content: center;
     align-items: center;
 }
-.h2-sub{
-width: 520px;
+
+.h2-sub {
+    width: 520px;
 }
-.p-page1{
+
+.p-page1 {
     width: 440px;
     text-align: center;
     font-weight: 400;
-font-size: 28px;
-line-height: 33px;
-padding: 20px 0px 0px 0px;
+    font-size: 28px;
+    line-height: 33px;
+    padding: 20px 0px 0px 0px;
 }
+
 .button {
     background: #3EB25E;
     border-radius: 35px;
@@ -25,16 +27,34 @@ padding: 20px 0px 0px 0px;
     height: 34px;
     border-top: 20px;
     position: relative;
-        top: 43px;
-        color: #fff;
-        font-family: 'Roboto', sans-serif;
-        font-size: 22px;
-        text-align: center;
-        font-weight: bolder;
-        cursor: pointer;
-    }
-    .content{
+    top: 43px;
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    font-size: 22px;
+    text-align: center;
+    font-weight: bolder;
+    cursor: pointer;
+}
+
+.content {
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
+}
+
+@media(max-width:768px) {
+    main {
         display: flex;
-        justify-content: space-around;
-        gap: 20px;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        overflow-x: hidden;
     }
+
+    img {
+        padding: 0px 60px 0px 0px;
+        width: 271px;
+        height: 416px;
+    }
+    
+}
