--- a/pages/page02/page02.css
+++ b/pages/page02/page02.css
@@ -107,5 +107,11 @@ width: 85%;
     justify-content:flex-start;
 
 }
+@media(max-width:768px) , (min-height:1024px) {
+  main {
+      display: flex;
+      flex-direction: column;
+  }
+}
 
 
