--- a/layout/layout.css
+++ b/layout/layout.css
@@ -3,18 +3,13 @@
 
     margin: 0%;
 }
-img{
-    width: 531px;
-    height: 661px;
-    
-}
+
 main{
     display: flex;
     width: 100%;
     height: 100vh;
   align-items: center;
-    justify-content: space-around;
-    gap:50px;
+    justify-content: space-evenly;
     
 }
 a{
@@ -30,7 +25,7 @@ h2{
     text-align: center;
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
-font-size: 39px;
+font-size: 200%;
 line-height: 46px;
 }
 p{
