--- a/pages/page01/page01.css
+++ b/pages/page01/page01.css
@@ -1,3 +1,6 @@
+img{
+    width: 572px;
+}
 .article-h {
     display: flex;
     flex-direction: column;
@@ -42,19 +45,45 @@
     gap: 20px;
 }
 
-@media(max-width:768px) {
+@media(max-width:768px) , (min-height:1024px) {
     main {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        gap:0;
+        width: 50%;
+        align-content: center;
         overflow-x: hidden;
     }
 
     img {
-        padding: 0px 60px 0px 0px;
-        width: 271px;
-        height: 416px;
+        width: 90%;
+        height: 90%;
+        margin: 0%;
+        padding: 0px 0px 0px 25px;
+        
     }
-    
+    .h2-sub{
+        font-size:170%;
+        width: 90%;
+        line-height: 110%;
+        padding-bottom: 14px;
+    }
+    .p-page1{
+        font-size:20px; 
+        width: 80%;
+        padding: 0%;
+        line-height: 20px;
+    }
+    .content{
+        width: 90%;
+    }
+    .button{
+        font-size: 17px;
+        width: 150px;
+    }
+    .article-h{
+        padding-bottom: 100px;
+    }
 }
