--- a/pages/page02/page02.css
+++ b/pages/page02/page02.css
@@ -107,11 +107,81 @@ width: 85%;
     justify-content:flex-start;
 
 }
-@media(max-width:768px) , (min-height:1024px) {
+@media(max-width:768px)  {
   main {
       display: flex;
       flex-direction: column;
+      align-items: center;
+      justify-content: center;
   }
+  
+  img {
+    width: 90%;
+    height: 90%;
+    margin: 0%;
+    padding: 0px 0px 0px 25px;
+    
+}
+.h3-form{
+  font-size: 15px;
+  text-align: center;
+  padding-top: 0px;
+}
+
+.select-form{
+  width: 80%;
+  height: 40px;
+  margin: 10px 0px 0px 45px;
+  font-size: 14px;
+  
+}
+.legend{
+  font-size: 15px;
+  padding: 0%;
+  width: 320px;
+  margin: 0%;
+}
+label{
+  font-size: 16px;
+}
+input[type="radio"]+ label::before{
+  width: 20px;
+  height: 20px;
+ margin-left:5px ;
+ 
+}
+input[type="radio"]:checked + label::after{
+  width: 20px;
+  height: 20px;
+ margin-left:5px ;
+ 
+}
+.fieldset{
+gap: 0%;
+margin: 0%;
+padding-bottom: 0px;
+}
+p{
+  padding: 3px;
+}
+.content{
+display: flex;
+justify-content: center;
+align-items: center;
+gap: 5%;
+
+}
+.skip-button{
+  display: flex;
+justify-content: center;
+align-items: center;
+}
+.button{
+  width: 35%;
+  height: 26px;
+  font-size: 15px;
+  margin:0px ;
+}
 }
 
 
