--- a/pages/page03/page03.css
+++ b/pages/page03/page03.css
@@ -110,5 +110,81 @@ width: 85%;
     justify-content:flex-start;
 
 }
+@media(max-width:768px)  {
+  main {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 0%;
+  }
+  
+  img {
+    width: 90%;
+    height: 90%;
+    margin: 0%;
+    padding: 0px 0px 0px 25px;
+    
+}
+.h3-form{
+  font-size: 15px;
+  text-align: center;
+  padding-top: 0px;
+}
 
+.select-form{
+  width: 100%;
+  height: 35px;
+  margin: 10px 0px 0px 0px;
+  font-size: 14px;
+  
+}
+.legend{
+  font-size: 15px;
+  padding: 0%;
+  width: 260px;
+  margin: 0%;
+}
+label{
+  font-size: 16px;
+}
+input[type="checkbox"]+ label::before{
+  width: 20px;
+  height: 20px;
+ margin-left:5px ;
+ 
+}
+input[type="checkbox"]:checked + label::after{
+  width: 20px;
+  height: 20px;
+ margin-left:5px ;
+ 
+}
+.fieldset{
+gap: 0%;
+margin: 0%;
+padding-bottom: 0px;
+}
+p{
+  padding: 7px;
+}
+.content{
+display: flex;
+justify-content: center;
+align-items: center;
+gap: 5%;
+
+}
+.skip-button{
+  display: flex;
+justify-content: center;
+align-items: center;
+}
+.button{
+  width: 40%;
+  height: 26px;
+  font-size: 15px;
+  margin:0px ;
+}
+}
 
