--- a/pages/page05/page05.css
+++ b/pages/page05/page05.css
@@ -24,6 +24,16 @@ form {
     height: 50px;
     border-color:rgba(0, 0, 0, 0.250) ;
 }
+.input-name1 {
+    width: 300%;
+    height: 40px;
+    border-radius: 17px;
+    margin-top: 20px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 26px;
+    height: 50px;
+    border-color:rgba(174, 15, 15, 0.25) ;
+}
 
 .input-name::placeholder {
     color: rgba(0, 0, 0, 0.250);
@@ -85,4 +95,39 @@ input:hover{
     font-size: 22px;
     text-align: center;
     font-weight: bolder;
+}
+@media (max-width:768px){
+    main{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding-left: 0%;
+
+    }
+    img{
+        width: 80%;
+    }
+    .input-name{
+        width: 80%;
+        height: 40%;
+    }
+    .input-email{
+        width: 80%;
+        height: 40%;
+    }
+    .form-art{
+        margin-left: 5%;
+        gap: 0%;
+    }
+    #form{
+        gap: 0%;
+    }
+    .label{
+        font-size: 24px;
+        width: 10px;
+    }
+    .button{
+        width: 130%;
+    }
 }
