fix: screen responsive (last version)

--- a/pages/page03/page03.css
+++ b/pages/page03/page03.css
@@ -136,6 +136,7 @@ width: 85%;
       align-items: center;
       justify-content: center;
       height: 0%;
+      padding-left: 0%;
   }
   
   img {
