--- a/pages/page02/page02.css
+++ b/pages/page02/page02.css
@@ -134,6 +134,7 @@ width: 85%;
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      padding-left: 0%;
   }
   
   img {
