--- a/layout/layout.css
+++ b/layout/layout.css
@@ -67,6 +67,7 @@ h3{
   @media(max-width:768px){
     main{
         height: 0%;
+        padding: 0%;
     }
   }
   @media(min-width:800px ) and (max-width:1443px){
